# libvmod-memcached

./: .gitignore  .travis.yml  CHANGES.rst  COPYING  Makefile.am  README.rst  configure.ac  vmod-memcached.spec
debian/: changelog  control  copyright  dirs
src/: Makefile.am  vmod_memcached.c  vmod_memcached.vcc
src/tests/: gen-vcl.sh  runner  test00.vtc  test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc
